--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.13",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
