--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/test-utils": "^2.2.4",
     "autoprefixer": "^10.4.13",
+    "axios-mock-adapter": "^1.21.2",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
